--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -37,11 +37,12 @@
             android:label="@string/title_activity_maps" />
 
         <service
-            android:name=".Tracker"
-            android:enabled="true" />
+            android:name=".ServiceStuff.Tracker"
+            android:enabled="true"
+            android:exported="false" />
 
         <receiver
-            android:name=".StartBackgroundService"
+            android:name=".ServiceStuff.StartBackgroundService"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
@@ -62,6 +63,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
