--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,9 +36,10 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
 
-        <service android:name=".ServiceStuff.TrackerJob"
+        <service
+            android:name=".ServiceStuff.TrackerJob"
             android:exported="true"
-            android:permission="android.permission.BIND_JOB_SERVICE"/>
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <activity android:name=".account.LoginActivity" />
         <activity android:name=".account.RegisterActivity" />
